# libcaribu

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: openalea_ci.yml
conda/: conda_build_config.yaml  environment-win64.yml  environment.yml  meta.yaml
src/cpp/Canestra/src/: CMakeLists.txt  bsp.cpp  bzh.cpp  canopy_E.cpp  canopy_io.cpp  capteur.cpp  capteur.h  diffuseur.cpp  ff.cpp  image.h  infini.cpp  lumiere.h  pavage.cpp  radioxity.cpp  solver.cpp  va_test.cpp  voxel.cpp
src/cpp/Periodise/src/: GetOpt.cpp  GetOpt.h  Mmath.h  canopyL.cpp  canopyL.h  diffuseur.cpp  outils.h  primitive.cpp
src/cpp/bibliotek/: GetOpt.cpp  chrono.cpp  outils.cpp  parse_geometry.cpp  primitive.cpp
src/cpp/include/: Mmath.h  T_geometrie.h  T_utilitaires.h  actop.h  bsp.h  bzh.h  canopy.h  cantools.h  chrono.h  diffuseur.h  ferrlog.h  matrix.h  outils.h  parse_geometry.h  primitive.h  transf.h  utils.h
src/cpp/mc-sail/src/: msail.cpp  multicou.cpp  multicou.h  profil.cpp
src/cpp/meschach/mesch12a/include/: iter.h  matlab.h  meminfo.h
src/cpp/meschach/mesch12a/src/: CMakeLists.txt  arnoldi.c  bkpfacto.c  chfactor.c  conjgrad.c  copy.c  dmacheps.c  err.c  extras.c  fft.c  givens.c  hessen.c  hsehldr.c  iter.h  iternsym.c  itersym.c  ivecop.c  machine.h.in  matop.c  matrixio.c  meminfo.c  pxop.c  schur.c  solve.c  sparse.c  sparseio.c  spbkp.c  spchfctr.c  splufctr.c  svd.c  symmeig.c
src/cpp/s2v/src/: s2v.cpp
src/openalea/caribu_cpp/: __init__.py  tools.py
src/openalea/libcaribu/: algos.py  commands.py  io.py  tools.py
src/openalea/libcaribu/data/: filterT.can  nested_radiosity_toric_scene.vec0  projection_non_toric_scene.vec0  projection_sail_toric_scene.vec0  projection_toric_scene.vec0  radiosity_non_toric_scene.vec0
test/: test_api.py  test_caribu.py  test_commands.py  test_io.py  test_legacy_cmd.py  test_legacy_using_algos.py  test_legacy_using_cmd.py  test_single_triangle.py  test_tools.py
test/data/: nested_radiosity_toric_scene.vec0  projection_non_toric_scene.vec0  projection_sail_toric_scene.vec0
