[build-system]
requires = ["scikit-build-core", "setuptools-scm"]
build-backend = "scikit_build_core.build"

# enable dynamic version based on git tags
[tool.setuptools_scm]

# Configure to align with the one of meta.yaml
fallback_version = "1.0.1.dev0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# build
[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.build-type = "Release"
logging.level = "WARNING"
build.verbose = true
# set compatibility with editable installs
build-dir = "build"
editable.rebuild = true

# add python package
[tool.scikit-build.wheel.packages]
"openalea/libcaribu" = "src/openalea/libcaribu"


[project]
name = "openalea.libcaribu"
authors = [
  { name = "Christian Fournier"},
  { name = "Michael Chelle"},
  { name = "Christophe Pradal"},
]
description = "C extension of openalea.caribu model"
license = "CECILL-C"
dynamic = ["version"]
dependencies = [
  "numpy"
]

[project.optional-dependencies]
test = [
  "pytest"
]


